[package]
name = "kvdb"
version = "0.1.0"
authors = ["June Yi <jytechdevops@gmail.com>"]
description = "A key-value store"
edition = "2021"

[lib]
name = "kvdb"
test = false

[[bin]]
name = "kvdb"
test = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
clap = "4.5.20"