[package]
name = "kvdb"
version = "0.1.0"
authors = ["June Yi <jytechdevops@gmail.com>"]
description = "A key-value store"
edition = "2021"

[lib]
name = "kvdb"
test = false

[[bin]]
name = "kvdb"
test = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"
walkdir = "2.5.0"
