[package]
name = "kvs"
version = "0.1.0"
authors = ["June Yi"]
description = "A key-value store"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tempfile = "3.20.0"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
